Fixed major logic issue

--- a/Enemizer.csproj
+++ b/Enemizer.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0FAA42FE-8942-4CDA-98DD-8BF0E8BCBD7D}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Enemizer</RootNamespace>
     <AssemblyName>Enemizer</AssemblyName>
