--- a/Enemizer.csproj
+++ b/Enemizer.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Randomization.cs" />
+    <Compile Include="RomData.cs" />
     <Compile Include="UnusedCode.cs" />
     <Compile Include="Version.cs" />
     <EmbeddedResource Include="EnemizerForm.resx">
