--- a/EnimizerLibrary/EnemizerLibrary.csproj
+++ b/EnimizerLibrary/EnemizerLibrary.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -49,12 +53,16 @@
     <Compile Include="DungeonsSpritesRandomization.cs" />
     <Compile Include="OverworldSpritesArea.cs" />
     <Compile Include="OverworldSpritesRandomization.cs" />
+    <Compile Include="Patch.cs" />
     <Compile Include="PotListing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Randomization.cs" />
     <Compile Include="RomData.cs" />
     <Compile Include="UnusedCode.cs" />
     <Compile Include="Version.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
