Move sprite loading
Moved sprite loading to its own class (still needs cleanup)
Save config on form close instead of everytime it is modified

--- a/EnemizerGui/Enemizer.csproj
+++ b/EnemizerGui/Enemizer.csproj
@@ -66,6 +66,7 @@
     <Compile Include="file_names.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sprite.cs" />
     <EmbeddedResource Include="EnemizerForm.resx">
       <DependentUpon>EnemizerForm.cs</DependentUpon>
     </EmbeddedResource>
