--- a/EnemizerTests/EnemizerTests.csproj
+++ b/EnemizerTests/EnemizerTests.csproj
@@ -70,6 +70,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="BossRandomizer.cs" />
+    <Compile Include="NewBossRandomizer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
