--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -48,38 +48,38 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Boss\TrinexxBoss.cs" />
-    <Compile Include="Boss\EmptyBoss.cs" />
-    <Compile Include="Boss\BossType.cs" />
-    <Compile Include="Boss\LanmolaBoss.cs" />
-    <Compile Include="Boss\MoldormBoss.cs" />
-    <Compile Include="Boss\HelmasaurBoss.cs" />
-    <Compile Include="Boss\ArrghusBoss.cs" />
-    <Compile Include="Boss\MothulaBoss.cs" />
-    <Compile Include="Boss\BlindBoss.cs" />
-    <Compile Include="Boss\KholdstareBoss.cs" />
-    <Compile Include="Boss\VitreousBoss.cs" />
-    <Compile Include="Boss\ArmosBoss.cs" />
-    <Compile Include="Boss\Boss.cs" />
-    <Compile Include="BossRandomizer.cs" />
-    <Compile Include="BossShells.cs" />
+    <Compile Include="BossRandomizer\Boss\TrinexxBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\EmptyBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\BossType.cs" />
+    <Compile Include="BossRandomizer\Boss\LanmolaBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\MoldormBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\HelmasaurBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\ArrghusBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\MothulaBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\BlindBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\KholdstareBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\VitreousBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\ArmosBoss.cs" />
+    <Compile Include="BossRandomizer\Boss\Boss.cs" />
+    <Compile Include="BossRandomizer\BossRandomizer.cs" />
+    <Compile Include="BossRandomizer\BossShells.cs" />
     <Compile Include="Chests.cs" />
     <Compile Include="Constants.cs" />
-    <Compile Include="Dungeons\TurtleRockDungeon.cs" />
-    <Compile Include="Dungeons\GT1Dungeon.cs" />
-    <Compile Include="Dungeons\GT2Dungeon.cs" />
-    <Compile Include="Dungeons\GT3Dungeon.cs" />
-    <Compile Include="Dungeons\DesertPalaceDungeon.cs" />
-    <Compile Include="Dungeons\TowerOfHeraDungeon.cs" />
-    <Compile Include="Dungeons\PalaceOfDarknessDungeon.cs" />
-    <Compile Include="Dungeons\SwampPalaceDungeon.cs" />
-    <Compile Include="Dungeons\SkullWoodsDungeon.cs" />
-    <Compile Include="Dungeons\ThievesTownDungeon.cs" />
-    <Compile Include="Dungeons\IcePalaceDungeon.cs" />
-    <Compile Include="Dungeons\MiseryMireDungeon.cs" />
-    <Compile Include="Dungeons\EasternPalaceDungeon.cs" />
-    <Compile Include="Dungeons\DungeonType.cs" />
-    <Compile Include="Dungeons\Dungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\TurtleRockDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\GT1Dungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\GT2Dungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\GT3Dungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\DesertPalaceDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\TowerOfHeraDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\PalaceOfDarknessDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\SwampPalaceDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\SkullWoodsDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\ThievesTownDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\IcePalaceDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\MiseryMireDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\EasternPalaceDungeon.cs" />
+    <Compile Include="BossRandomizer\Dungeons\DungeonType.cs" />
+    <Compile Include="BossRandomizer\Dungeons\Dungeon.cs" />
     <Compile Include="DungeonProperties.cs" />
     <Compile Include="DungeonsRoomsSprites.cs" />
     <Compile Include="DungeonsSpritesRandomization.cs" />
