Add Room ID Constants

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -84,6 +84,7 @@
     <Compile Include="DungeonsRoomsSprites.cs" />
     <Compile Include="DungeonsSpritesRandomization.cs" />
     <Compile Include="EnemyRandomizer\Room.cs" />
+    <Compile Include="EnemyRandomizer\RoomConstants.cs" />
     <Compile Include="EnemyRandomizer\Sprite.cs" />
     <Compile Include="EnemyRandomizer\SpriteConstants.cs" />
     <Compile Include="EnemyRandomizer\SpriteGroup.cs" />
