Load room sprite data

--- a/EnemizerTests/EnemizerTests.csproj
+++ b/EnemizerTests/EnemizerTests.csproj
@@ -71,6 +71,8 @@
   <ItemGroup>
     <Compile Include="BossRandomizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SpriteTests.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
