Dungeon sprite rewrite implementation round 1 Still has bugs and missing proper checking for a bunch of group/subgroup stuff Added initial "rom viewer" (debug and set a breakpoint to use it for now).

--- a/EnemizerTests/EnemizerTests.csproj
+++ b/EnemizerTests/EnemizerTests.csproj
@@ -69,6 +69,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="DungeonEnemyRandomizerTests.cs" />
     <Compile Include="BossRandomizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SpriteGroupTests.cs" />
