--- a/Assembly/Assembly.csproj
+++ b/Assembly/Assembly.csproj
@@ -45,6 +45,7 @@
 "..\bincomp\bincomp.exe" bosses_moved.asm patchData.json
 copy patchData.json $(SolutionDir)
 copy patchData.json $(SolutionDir)\EnemizerTests\bin\Debug
+copy patchData.json $(SolutionDir)\RomViewer\bin\Debug
 </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
