--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -85,11 +85,14 @@
     <Compile Include="DungeonsSpritesRandomization.cs" />
     <Compile Include="EnemyRandomizer\DungeonEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\GroupSubsetPossibleSprite.cs" />
+    <Compile Include="EnemyRandomizer\GroupSubsetPossibleSpriteCollection.cs" />
     <Compile Include="EnemyRandomizer\Room.cs" />
+    <Compile Include="EnemyRandomizer\RoomCollection.cs" />
     <Compile Include="EnemyRandomizer\RoomConstants.cs" />
     <Compile Include="EnemyRandomizer\DungeonSprite.cs" />
     <Compile Include="EnemyRandomizer\SpriteConstants.cs" />
     <Compile Include="EnemyRandomizer\SpriteGroup.cs" />
+    <Compile Include="EnemyRandomizer\SpriteGroupCollection.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GeneralPatches.cs" />
     <Compile Include="OptionFlags.cs" />
