--- a/EnemizerTests/EnemizerTests.csproj
+++ b/EnemizerTests/EnemizerTests.csproj
@@ -72,6 +72,7 @@
     <Compile Include="DungeonEnemyRandomizerTests.cs" />
     <Compile Include="BossRandomizerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoomRequirementTests.cs" />
     <Compile Include="SpriteGroupTests.cs" />
     <Compile Include="RoomTests.cs" />
     <Compile Include="Utilities.cs" />
