Fixed room requirements Added tests to make sure we don't have rooms in both 82 and 83 that can only be in one or the other.

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -94,6 +94,7 @@
     <Compile Include="EnemyRandomizer\SpriteConstants.cs" />
     <Compile Include="EnemyRandomizer\SpriteGroup.cs" />
     <Compile Include="EnemyRandomizer\SpriteGroupCollection.cs" />
+    <Compile Include="EnemyRandomizer\SpriteRequirement.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GeneralPatches.cs" />
     <Compile Include="OptionFlags.cs" />
