--- a/EnemizerTests/EnemizerTests.csproj
+++ b/EnemizerTests/EnemizerTests.csproj
@@ -73,6 +73,7 @@
     <Compile Include="BossRandomizerTests.cs" />
     <Compile Include="Experiments.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="OverworldAreaRequirementTests.cs" />
     <Compile Include="RoomRequirementTests.cs" />
     <Compile Include="SpriteGroupTests.cs" />
     <Compile Include="RoomTests.cs" />
