--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -83,20 +83,20 @@
     <Compile Include="DungeonProperties.cs" />
     <Compile Include="DungeonsRoomsSprites.cs" />
     <Compile Include="DungeonsSpritesRandomization.cs" />
-    <Compile Include="EnemyRandomizer\DungeonEnemyRandomizer.cs" />
+    <Compile Include="EnemyRandomizer\Dungeon\DungeonEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\GroupSubsetPossibleSprite.cs" />
     <Compile Include="EnemyRandomizer\GroupSubsetPossibleSpriteCollection.cs" />
-    <Compile Include="EnemyRandomizer\OverworldArea.cs" />
-    <Compile Include="EnemyRandomizer\OverworldAreaConstants.cs" />
-    <Compile Include="EnemyRandomizer\OverworldEnemyRandomizer.cs" />
-    <Compile Include="EnemyRandomizer\OverworldGroupRequirementCollection.cs" />
-    <Compile Include="EnemyRandomizer\OverworldRequirement.cs" />
-    <Compile Include="EnemyRandomizer\OverworldSprite.cs" />
-    <Compile Include="EnemyRandomizer\Room.cs" />
-    <Compile Include="EnemyRandomizer\RoomCollection.cs" />
-    <Compile Include="EnemyRandomizer\RoomConstants.cs" />
-    <Compile Include="EnemyRandomizer\DungeonSprite.cs" />
-    <Compile Include="EnemyRandomizer\RoomRequirement.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldArea.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldAreaConstants.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldEnemyRandomizer.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldGroupRequirementCollection.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldRequirement.cs" />
+    <Compile Include="EnemyRandomizer\Overworld\OverworldSprite.cs" />
+    <Compile Include="EnemyRandomizer\Dungeon\Room.cs" />
+    <Compile Include="EnemyRandomizer\Dungeon\RoomCollection.cs" />
+    <Compile Include="EnemyRandomizer\Dungeon\RoomConstants.cs" />
+    <Compile Include="EnemyRandomizer\Dungeon\DungeonSprite.cs" />
+    <Compile Include="EnemyRandomizer\Dungeon\RoomRequirement.cs" />
     <Compile Include="EnemyRandomizer\SpriteConstants.cs" />
     <Compile Include="EnemyRandomizer\SpriteGroup.cs" />
     <Compile Include="EnemyRandomizer\SpriteGroupCollection.cs" />
