--- a/Assembly/Assembly.csproj
+++ b/Assembly/Assembly.csproj
@@ -46,6 +46,10 @@
 copy patchData.json $(SolutionDir)
 copy patchData.json $(SolutionDir)\EnemizerTests\bin\Debug
 copy patchData.json $(SolutionDir)\RomViewer\bin\Debug
+"..\bincomp\bincomp.exe" randomize_bushes.asm randomizeBushes.json
+copy randomizeBushes.json $(SolutionDir)
+copy randomizeBushes.json $(SolutionDir)\EnemizerTests\bin\Debug
+copy randomizeBushes.json $(SolutionDir)\RomViewer\bin\Debug
 </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
