--- a/Assembly/Assembly.csproj
+++ b/Assembly/Assembly.csproj
@@ -43,17 +43,11 @@
   <PropertyGroup>
     <PreBuildEvent>cd $(ProjectDir)
 
-"..\bincomp\bincomp.exe" bosses_moved.asm patchData.json
+"..\bincomp\bincomp.exe" main.asm patchData.json
 copy patchData.json $(SolutionDir)
 copy patchData.json $(SolutionDir)\EnemizerGui\bin\Debug
 copy patchData.json $(SolutionDir)\EnemizerTests\bin\Debug
 copy patchData.json $(SolutionDir)\RomViewer\bin\Debug
-
-"..\bincomp\bincomp.exe" randomize_bushes.asm randomizeBushes.json
-copy randomizeBushes.json $(SolutionDir)
-copy randomizeBushes.json $(SolutionDir)\EnemizerGui\bin\Debug
-copy randomizeBushes.json $(SolutionDir)\EnemizerTests\bin\Debug
-copy randomizeBushes.json $(SolutionDir)\RomViewer\bin\Debug
 </PreBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
