--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -107,16 +107,41 @@
     <Compile Include="EnemyRandomizer\SpriteRequirement.cs" />
     <Compile Include="Extensions.cs" />
     <Compile Include="GeneralPatches.cs" />
+    <Compile Include="Graph\Data\Dungeons.cs" />
+    <Compile Include="Graph\Data\Edges\AreaEdges.cs" />
+    <Compile Include="Graph\Data\Edges\EntranceEdges.cs" />
+    <Compile Include="Graph\Data\Edges\ExitEdges.cs" />
+    <Compile Include="Graph\Data\Edges\ItemEdges.cs" />
+    <Compile Include="Graph\Data\Edges\RawEntranceCollection.cs" />
+    <Compile Include="Graph\Data\Edges\RawExitCollection.cs" />
+    <Compile Include="Graph\Data\Edges\RoomEdges.cs" />
+    <Compile Include="Graph\Data\GameItems.cs" />
+    <Compile Include="Graph\Data\Nodes\BossNodes.cs" />
+    <Compile Include="Graph\Data\Nodes\ItemNodes.cs" />
+    <Compile Include="Graph\Data\Nodes\OverworldNodes.cs" />
+    <Compile Include="Graph\Data\Nodes\RoomNodes.cs" />
+    <Compile Include="Graph\Edge.cs" />
+    <Compile Include="Graph\Entrance.cs" />
+    <Compile Include="Graph\Exit.cs" />
+    <Compile Include="Graph\Graph.cs" />
+    <Compile Include="Graph\GraphData.cs" />
+    <Compile Include="Graph\Item.cs" />
+    <Compile Include="Graph\ItemLocation.cs" />
+    <Compile Include="Graph\LogicalBoss.cs" />
+    <Compile Include="Graph\Node.cs" />
+    <Compile Include="Graph\OverworldAreaNode.cs" />
+    <Compile Include="Graph\Requirement.cs" />
+    <Compile Include="Graph\RoomNode.cs" />
     <Compile Include="OptionFlags.cs" />
     <Compile Include="Patch.cs" />
     <Compile Include="PotListing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Randomization.cs" />
     <Compile Include="RomData.cs" />
-    <Compile Include="Spheres\Entrance.cs" />
-    <Compile Include="Spheres\EntranceConstants.cs" />
-    <Compile Include="Spheres\Exit.cs" />
-    <Compile Include="Spheres\ExitConstants.cs" />
+    <Compile Include="Graph\RomEntrance.cs" />
+    <Compile Include="Graph\EntranceConstants.cs" />
+    <Compile Include="Graph\RomExit.cs" />
+    <Compile Include="Graph\ExitConstants.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="Version.cs" />
   </ItemGroup>
