--- a/EnemizerTests/EnemizerTests.csproj
+++ b/EnemizerTests/EnemizerTests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="OverworldAreaRequirementTests.cs" />
     <Compile Include="RoomRequirementTests.cs" />
+    <Compile Include="GraphTest.cs" />
     <Compile Include="SpriteGroupTests.cs" />
     <Compile Include="RoomTests.cs" />
     <Compile Include="Utilities.cs" />
