Updated shell to inject instead of hard coding (still hsa some bugs.)

--- a/EnemizerLibrary/EnemizerLibrary.csproj
+++ b/EnemizerLibrary/EnemizerLibrary.csproj
@@ -89,10 +89,12 @@
     <Compile Include="BossRandomizer\Dungeons\EasternPalaceDungeon.cs" />
     <Compile Include="BossRandomizer\Dungeons\DungeonType.cs" />
     <Compile Include="BossRandomizer\Dungeons\Dungeon.cs" />
-    <Compile Include="DungeonObject\Type2DungeonObject.cs" />
-    <Compile Include="DungeonObject\Type1DungeonObject.cs" />
+    <Compile Include="DungeonObject\DoorDungeonObject.cs" />
+    <Compile Include="DungeonObject\SubType1Object.cs" />
+    <Compile Include="DungeonObject\LayerDungeonObject.cs" />
     <Compile Include="DungeonObject\DungeonObjectDataTable.cs" />
     <Compile Include="DungeonObject\DungeonObjectPointerCollection.cs" />
+    <Compile Include="DungeonObject\SubType3Object.cs" />
     <Compile Include="EnemyRandomizer\Dungeon\DungeonEnemyRandomizer.cs" />
     <Compile Include="EnemyRandomizer\GroupSubsetPossibleSprite.cs" />
     <Compile Include="EnemyRandomizer\GroupSubsetPossibleSpriteCollection.cs" />
